--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 
 
 
-h1, h2, h3, h4, h5, h6{
+h2, h3, h4, h5, h6{
     display: flex;
     justify-content: center;
     padding: 1%;
@@ -16,12 +16,18 @@ h1, h2, h3, h4, h5, h6{
 
 
 
-h2{
+.navbar-brand{
     font-style: normal;
     font-weight: 900;
-    color: rgb(63, 31, 31);
+    color: #d1703b;
+    text-shadow: black -5px 4px 8px;
     
 }
+
+.navbar-brand:hover{
+    color:#8D548C;
+}
+
 
 h3{
     color:rgb(63, 31, 31);
@@ -44,6 +50,7 @@ nav h1{
 
 nav a{
     color: rgb(255, 255, 255);
+    text-shadow: black -5px 4px 8px;
 }
 
 .navbar-nav{
@@ -59,7 +66,7 @@ nav a{
 
 }
 .navbar-nav a:hover{
-    color: #4f748b;
+    color: #bba1ba;
     font-weight: 700;
 }
 
@@ -77,7 +84,7 @@ nav a{
 /*Carousel*/
 
 .carousel{
-    margin-top: 0.5%;
+    margin-top: 5%;
     margin-bottom: 4%;
 }
 
