--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,12 @@ nav a{
 }
 
 .nosotros{
-    background-color: #5b95a8;
+    background-color: #393f41;
+}
+
+.nosotros .h2{
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 .pagina p{
@@ -106,69 +111,14 @@ nav a{
     display: flex;
     justify-content: center;
     text-align: center;
-    margin: 3%;
-    padding: 3%;
+    margin: 1%;
+    padding-bottom: 3%;
     text-shadow: rgb(15, 11, 11) 1px 2px 1px 1px ;
     backdrop-filter: blur (10px);
     
 }
 
-.interes{
-    background-image: url(../images/montañas-fondo.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 
-
-
-.distancias{
-    font-family: "Playpen Sans", cursive;
-    font-optical-sizing: auto;
-    font-weight: weight;
-    font-style: normal;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    height: 50vh;
-}
-
-.distancias h6{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-}
-
-.distancias .lugares{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    text-align: center;
-}
-
-.distancias .lugares h6 a{
-    text-decoration: none;
-    color: rgb(114, 114, 182);
-}
-
-
-
-.distancias .lugares img{
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    border-style: double;
-    border-color: rgb(114, 114, 182);
-}
-
-.distancias .lugares h6 a:hover{
-    text-decoration: none;
-    color: rgb(83, 141, 151);
-}
-
-
-.lunfardo{
-    margin: 3%;
-    padding: 3%;
-}
 
 
    
@@ -259,6 +209,110 @@ footer .informacion a:hover{
 }
 
 
+
+.interes{
+    background-image: url(../images/montañas-fondo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed, scroll;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 2%;
+}
+
+
+.interes .interes-up{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.interes .interes-down{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.interes .interes-up .imagen img{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border-style: double;
+}
+
+.interes .interes-down .imagen img{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border-style: double;
+}
+
+.interes .imagen{
+    max-width: 33.33%;
+}
+
+.interes .imagen a{
+    font-size: 0.8em;
+    text-decoration: none ;
+    color: white;
+}
+
+.interes .imagen a:hover{
+    color: lightseagreen;
+}
+
+
+
+/*.distancias{
+    font-family: "Playpen Sans", cursive;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    max-height  : 100vh;
+}
+
+
+
+.interes .distancias .lugares .inicio{
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
+}
+
+
+
+.distancias .lugares img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border-style: double;
+    border-color: rgb(114, 114, 182);
+}
+
+.distancias .lugares h6 a{
+    font-size: 1em;
+    text-decoration: none;
+    color: rgb(170, 217, 240);
+}
+
+
+
+.distancias .lugares h6 a:hover{
+    text-decoration: none;
+    color: rgb(83, 141, 151);
+}
+*/
+
+.lunfardo{
+    margin: 3%;
+    padding: 3%;
+}
+
+
 @media (min-width: 320px) and (max-width: 575px) {
 
     h1{
@@ -316,48 +370,85 @@ footer .informacion a:hover{
         color: white;
     }
 
+
+
     .interes{
         background-image: url(../images/montañas-fondo.png);
         background-size: cover;
         background-repeat: no-repeat;
-    }
-    
-    
-    
-    .distancias{
-        font-family: "Playpen Sans", cursive;
-        font-optical-sizing: auto;
-        font-weight: weight;
-        font-style: normal;
-        color: rgb(0, 0, 0);
-        text-decoration: none;
-        height: 50vh;
-    }
-    
-    .distancias h6{
+        background-attachment: fixed, scroll;
         display: flex;
-        justify-content:center;
-        flex-direction: row;
-        font-size: 0.1em;
-    }
-    
-    .distancias .lugares{
-        display: flex;
-        justify-content: space-between;
         flex-direction: column;
         text-align: center;
+        padding: 2%;
+    }
+    
+    
+    .interes .interes-up{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        text-align: center;
+        padding: 2%;
+    }
+    
+    .interes .interes-down{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    
+    .interes .interes-up .imagen img{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border-style: double;
+    }
+    
+    .interes .interes-down .imagen img{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border-style: double;
+    }
+    
+    .interes .imagen{
+        max-width: 33.33%;
+    }
+    
+    .interes .imagen a{
+        font-size: 0.6em;
+        text-decoration: none ;
+        color: white;
+    }
+    
+    .interes .imagen a:hover{
+        color: lightseagreen;
+    }
+
+    
+
+    /*no tocar
+    .interes .distancias .lugares .inicio{
+        box-shadow: none;
+        background-color: transparent;
+        box-shadow: none;
+        border: none;
+    }
+
+    .interes .distancias .lugares .inicio .imagen{
+        max-width: 20%;
     }
     
     .distancias .lugares h6 a{
+        font-size: 3px;
         text-decoration: none;
-        color: rgb(114, 114, 182);
+        color: rgb(170, 217, 240);
     }
     
-    
-    
     .distancias .lugares img{
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         border-radius: 50%;
         border-style: double;
         border-color: rgb(114, 114, 182);
@@ -366,7 +457,14 @@ footer .informacion a:hover{
     .distancias .lugares h6 a:hover{
         text-decoration: none;
         color: rgb(83, 141, 151);
+    }*/
+    
+    
+    .lunfardo{
+        margin: 3%;
+        padding: 3%;
     }
+    
 
 
     /*FOOTER*/
